--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
     <section id="Services" class="Services">
         <div class="service">
             <h3>Service 1</h3>
-        <img src="/images/light-bulbs-5488573_1920.jpg" width="300px" height="150%">
+        <img src="./images/light-bulbs-5488573_1920.jpg" width="300px" height="150%">
         </div>
 
         <div class="service">
             <h3>Service 2</h3>
-           <img src="/images/background-adare-restaurant.jpg" width=" 300px" height="150%" alt="">
+           <img src="./images/background-adare-restaurant.jpg" width=" 300px" height="150%" alt="">
         </div>
 
         <div class="service">
             <h3>Service 3</h3>
-        <img src="/images/business-2846221_1920.jpg" width="300px"  height="150%">
+        <img src="./images/business-2846221_1920.jpg" width="300px"  height="150%">
         </div>
 
     </section>
